--- a/TestBank/TestBank.csproj
+++ b/TestBank/TestBank.csproj
@@ -32,8 +32,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Supremes">
+      <HintPath>..\packages\dcsoup.0.2.0\lib\net45\Supremes.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,10 +49,15 @@
     <Reference Include="WebDriver">
       <HintPath>..\packages\Selenium.WebDriver.3.3.0\lib\net40\WebDriver.dll</HintPath>
     </Reference>
+    <Reference Include="WebDriver.Support">
+      <HintPath>..\packages\Selenium.Support.3.3.0\lib\net40\WebDriver.Support.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Account.cs" />
+    <Compile Include="AccountActivity.cs" />
     <Compile Include="AccountDetail.cs" />
+    <Compile Include="AccountStatement.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
